--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="navbar">
-            <img width="288px" height="85px" src="img/img2.avif" alt=""/>
+            <img width="288px" height="85px" src="img/logo.png" alt=""/>
         </div>
     </header>
 
