--- a/view-post.html
+++ b/view-post.html
@@ -24,7 +24,7 @@
                     <a class="sidebar-link" href=""><i class="fa-solid fa-comments"></i>Chat</a>
                 </li>
                 <li>
-                    <a class="sidebar-link" href=""><i class="fa-solid fa-id-badge"></i>Contact</a>
+                    <a class="sidebar-link" href="contact.html"><i class="fa-solid fa-id-badge"></i>Contact</a>
                 </li>
                 <li>
                     <a class="sidebar-link" href=""><i class="fa-solid fa-plus"></i>Add Post</a>
